--- a/Content/Mechanical Design.tex
+++ b/Content/Mechanical Design.tex
@@ -119,25 +119,42 @@ table for the assumptions
 \section{Detailed Design Development}
 % Elaborate on the development of the detailed mechanical design.
 
+
 \subsection{Body Design}
-% Discuss the design of the body.
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.7\linewidth]{Robot_Assembly_V2}
-	\caption[Body Design]{Body Design}
-	\label{fig:bodydesign}
+%three figures for the body design
+\begin{figure}[h!]
+    \centering
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering\captionsetup{width=.87\linewidth}
+        \includegraphics[width=\textwidth]{Body_Design_1}
+        \caption{Training error for trajectory transfer with and without output noise in the training data}
+        \label{subfig:sim1_lsd_results_training}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}[t]{0.495\textwidth}
+        \centering\captionsetup{width=.87\linewidth}
+        \includegraphics[width=\textwidth]{Body_Design_2}
+        \caption{Test error for trajectory transfer with and without output noise in the training data}
+		\label{subfig:sim1_lsd_results_test}
+    \end{subfigure}
+    \par\bigskip
+    \begin{subfigure}[t]{1\textwidth}
+        \centering\captionsetup{width=.87\linewidth}
+        \includegraphics[width=0.99\textwidth]{Body_Design_3}
+        \caption{Normalised transfer error for different input sets and transfer maps estimated without output noise in the training data}
+        \label{subfig:sim1_lsd_results_freq}
+    \end{subfigure}
+    \caption[Double Oscillator -- Transfer Error (Transfer Matrix)]
+    {Normalised transfer error for input trajectory transfer between two double oscillator systems using lifted-system matrices with different numbers of estimated parameters\textsuperscript{\textcolor{note_color}{a}}}
+    \raggedright\small\textsuperscript{\hspace{0.132\textwidth}\textcolor{note_color}{a}: Mean values are represented by the wide bars, and one added standard deviation by thin bars.}
+    \label{fig:sim1_lsd_results}
 \end{figure}
-
+% Discuss the design of the body.
 The body design is the main part of the robot, it is the main structure that holds all the components together.
 % Discuss material selection and the rationale behind these choices.
 % Include detailed CAD drawings and design schematics.
 
 
-
-%This comprehensive chapter unfolds the intricate details of the new design of our two-wheeled self-balancing robot, an advanced piece of engineering that incorporates additional degrees of freedom to enhance its movement capabilities. Through an exploration of the various motions the robot can perform, we delve into the intricate design considerations of each component, ensuring that they align with the overall functional and aesthetic vision.
-%
-%
 %\begin{figure}[h]
 %	\centering
 %	\includegraphics[width=1\textwidth]{Robot_Assembly_V2}
@@ -173,7 +190,42 @@ The body design is the main part of the robot, it is the main structure that hol
 %		\end{itemize}
 %	\end{itemize}
 %\end{itemize}
-\subsection{Leg Design}
+\subsection{Hip Knee Joint Design}
+%three figures for the Body_Knee_Joint
+\begin{figure}[h!]
+	\centering
+	\begin{subfigure}[t]{0.495\textwidth}
+		\centering\captionsetup{width=.87\linewidth}
+		\includegraphics[width=\textwidth]{Body_Knee_Joint_1}
+		\caption{Training error for trajectory transfer with and without output noise in the training data}
+		\label{subfig:sim1_lsd_results_training}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[t]{0.495\textwidth}
+		\centering\captionsetup{width=.87\linewidth}
+		\includegraphics[width=\textwidth]{Body_Knee_Joint_2}
+		\caption{Test error for trajectory transfer with and without output noise in the training data}
+		\label{subfig:sim1_lsd_results_test}
+	\end{subfigure}
+	\par\bigskip
+	\begin{subfigure}[t]{1\textwidth}
+		\centering\captionsetup{width=.87\linewidth}
+		\includegraphics[width=0.99\textwidth]{Body_Knee_Joint_3}
+		\caption{Normalised transfer error for different input sets and transfer maps estimated without output noise in the training data}
+		\label{subfig:sim1_lsd_results_freq}
+	\end{subfigure}
+	\caption[Double Oscillator -- Transfer Error (Transfer Matrix)]
+	{Normalised transfer error for input trajectory transfer between two double oscillator systems using lifted-system matrices with different numbers of estimated parameters\textsuperscript{\textcolor{note_color}{a}}}
+	\raggedright\small\textsuperscript{\hspace{0.132\textwidth}\textcolor{note_color}{a}: Mean values are represented by the wide bars, and one added standard deviation by thin bars.}
+	\label{fig:sim1_lsd_results}
+\end{figure}
+
+
+\subsection{Knee Wheel Joint Design}
+
+\subsection{safety considerations}
+
+
 
 
 
